--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,7 +1,7 @@
 <div class="divSobre container animated fadeInUp delay-1s">
     <div class="row">
         <div class="col-md-6">
-            <img class="img-fluid imgSobre" src="/assets/img/brunosobre3.png" alt="foto-historia">
+            <img class="img-fluid imgSobre" src="/Projeto-Front/assets/img/brunosobre3.png" alt="foto-historia">
         </div>
         <div class="col-md-6 d-flex align-items-center">
             <p class="divTexto">
@@ -28,7 +28,7 @@
                 meus clientes a alcançar uma vida plena e saudável.</p>
         </div>
         <div class="col-md-6">
-            <img class="img-fluid imgSobre" src="/assets/img/brunosobre4.png" alt="foto-missao">
+            <img class="img-fluid imgSobre" src="/Projeto-Front/assets/img/brunosobre4.png" alt="foto-missao">
         </div>
     </div>
 </div>
@@ -37,7 +37,7 @@
 <div class="divSobre container animated fadeInUp delay-3s">
     <div class="row">
         <div class="col-md-6">
-            <img class="img-fluid imgSobre" src="/assets/img/brunosobre2.png" alt="foto-comprometimento">
+            <img class="img-fluid imgSobre" src="/Projeto-Front/assets/img/brunosobre2.png" alt="foto-comprometimento">
         </div>
         <div class="col-md-6 d-flex align-items-center">
 
