--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark p-5 fixed-top w-100">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img class="imgLogo img-fluid" src="/assets/img/3.png" alt="">
+                    <img class="imgLogo img-fluid" src="/Projeto-Front/assets/img/3.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
